Improved Linear SVC with ngram_range nd TF-IDF

--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "4     0        3  &#8220;@RawrItsTaraa: Trust these bitches ? Na..."
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        " (1,000, 'MONEY', 391)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "spacy.tokens.doc.Doc"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
      "output_type": "stream",
      "text": [
       "Number of stop words: 305\n",
-      "First ten stop words: ['back', 'i', 'nobody', 'hence', 'put', 'above', 'myself', 'indeed', 'enough', 'during', 'herein', 'they', 'themselves', 'himself', 'please', 'we', 'among', 'yourselves', 'alone', 'only']\n"
+      "First ten stop words: ['before', 'whoever', 'moreover', 'of', 'just', 'such', 'but', 'give', 'they', 'while', 'meanwhile', 'ours', 'only', 'take', 'you', 'to', 'whether', 'toward', 'yours', 'front']\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "4     0        3  &#8220;@RawrItsTaraa: Trust these bitches ? Na..."
       ]
      },
-     "execution_count": 107,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -463,11 +463,11 @@
        "                lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
        "                ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
        "                strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       "                tokenizer=<function spacy_tokenizer at 0x1a5616dc20>,\n",
+       "                tokenizer=<function spacy_tokenizer at 0x121579c20>,\n",
        "                vocabulary=None)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "                                 ngram_range=(1, 1), preprocessor=None,\n",
        "                                 stop_words=None, strip_accents=None,\n",
        "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       "                                 tokenizer=<function spac...kenizer at 0x1a5616dc20>,\n",
+       "                                 tokenizer=<function spacy_tokenizer at 0x121579c20>,\n",
        "                                 vocabulary=None)),\n",
        "                ('classifier',\n",
        "                 DecisionTreeRegressor(ccp_alpha=0.0, criterion='mse',\n",
@@ -510,7 +510,7 @@
        "         verbose=False)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,21 +544,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0. 0. 0. 2. 0. 0. 0. 0. 0. 1. 3. 0. 0. 0. 0. 0. 2. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 1. 0. 0. 2. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 1. 0. 0. 1. 0. 1. 0. 0. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0.\n",
-      " 0. 2. 0. 1. 0. 0. 0. 0. 0. 0. 2. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0.]\n",
-      "Logistic Regression Accuracy: 0.7496637525218561\n",
-      "Logistic Regression Precision: 0.7496637525218561\n",
-      "Logistic Regression Recall: 0.7496637525218561\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-3494e6b8c01e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredicted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicted\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Model Accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -575,33 +572,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 3.04174769 -0.1042171  -0.14861452 -0.17384757  0.89399207 -1.62686592\n",
-      "  1.00199956  0.83670408  0.38263013  0.39464244]\n",
-      "[5 3 3 3 3 3 3 3 3 3]\n",
-      "14376    0\n",
-      "9952     0\n",
-      "5678     0\n",
-      "12253    0\n",
-      "5356     0\n",
-      "17999    0\n",
-      "13347    0\n",
-      "5588     1\n",
-      "12805    0\n",
-      "4793     0\n",
-      "Name: hate, dtype: int64\n",
-      "Logistic Regression Accuracy: 0.008742434431741762\n",
-      "Logistic Regression Precision: 0.008742434431741762\n",
-      "Logistic Regression Recall: 0.008742434431741762\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import metrics\n",
     "from sklearn.preprocessing import KBinsDiscretizer\n",
@@ -625,20 +598,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 0 0 0 0 1 0 0 0 0 0 0 2 0 0 0 0 0]\n",
-      "Logistic Regression Accuracy: 0.7964021519838601\n",
-      "Logistic Regression Precision: 0.7964021519838601\n",
-      "Logistic Regression Recall: 0.7964021519838601\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import metrics\n",
     "# Predicting with a test dataset\n",
@@ -654,69 +616,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "832       True\n",
-       "15486     True\n",
-       "12923     True\n",
-       "12076     True\n",
-       "11984    False\n",
-       "         ...  \n",
-       "10734     True\n",
-       "1974      True\n",
-       "12367     True\n",
-       "5299      True\n",
-       "18659     True\n",
-       "Name: hate, Length: 900, dtype: bool"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(y_test == predicted)[100:1000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15896    Aren't these little border jumpers supposed to...\n",
-       "10208    @TeamSky yellow in paris! Fantastic effort fro...\n",
-       "12852    @Pipe_Tyson Me? Nigga YOU the pussy. I got han...\n",
-       "2264     These hoes be actin up and these niccas be act...\n",
-       "329                                Ketchup on tha beat hoe\n",
-       "                               ...                        \n",
-       "11631    RT @Gawker: Conan O'Brien mocks the new Call o...\n",
-       "3603     @EmmaLouisaSuttl @timmyn90 Anyone bring in a m...\n",
-       "10860    @_That_Vibe_ bitch I'm Gretchen Weiners I do w...\n",
-       "18670    @Cheesus85 @greyyygoose faaaaggggottttt, speak...\n",
-       "11184    All these afternoon groups are trash besides t...\n",
-       "Name: text, Length: 5948, dtype: object"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,47 +643,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.378756235581692, 3.1650023183655042e-202)"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pearsonr(y_test, predicted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.9938837346736191, 0.0005736731093321747)"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pearsonr([1,2,3,4,5], [3,4,6,8,10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,20 +670,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.82826964511012e-188"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a[1]"
    ]
